services/posts/k8s-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts
  namespace: safemoon
spec:
  selector:
    matchLabels:
      app: posts
  replicas: 1
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - image: anhdiepmmk/gloo-posts:latest
          name: posts
          ports:
            - containerPort: 8080
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: posts
  namespace: safemoon
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: posts
