services/posts/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: posts-ingress
  namespace: safemoon
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: posts
            port:
              number: 8080
  - host: second.bar.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service2
            port:
              number: 80
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service3
            port:
              number: 80
